# Mortis

./: .gitignore  AGENTS.md  CONTEXT.md  HARNESS.md  PRD.md  README.md  pyproject.toml  seed.md
docs/: audit-followups.md  audit-handoff.md  decision-qa.md  issue-C1-draft.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/mortis-audit-v3/: e2e-llm-logs.json  e2e-report-agent.md  e2e-report-raw.md  e2e-report.md  e2e_experiment.py  mortis-audit-v3-agent.md  mortis-audit-v3.html  (+3 more)
mortis/: __init__.py  __main__.py  layers.py  main.py  persona.py  providers.py  redact.py  seed.py  vault.py
tests/: test_agent_tool.py  test_agent_tool_sub_private.py  test_async_provider.py  test_cli_extensions.py  test_clock_agent.py  test_daemon.py  test_deep_dreamer.py  test_dream_erode.py  test_dream_log.py  test_dream_phases.py  test_dream_recall.py  test_dream_triggers.py  test_drift_log.py  test_expression.py  test_gateway.py  test_goodnight.py  test_growth_compression.py  test_growth_frontmatter.py  test_growth_model.py  test_growth_preview_redact.py  test_growth_subconscious.py  test_growth_vault.py  test_growth_writer.py  test_layers.py  test_light_dreamer.py  test_logical_clock.py  test_markdown_render_agent.py  test_medium_dreamer.py  test_obsidian_parser.py  test_owner_notify.py  test_pipeline_chain.py  test_pipeline_growth_injection.py  test_provider_audit.py  test_provider_registry.py  test_provider_resilience.py  test_provider_tools.py  test_providers.py  test_redact.py  test_reflect_emotion.py  test_reflect_executor.py  (+31 more)
tools/: dev.py  pre-commit.sh
(+98 files in other folders)
